# AWD_GUI

./: .cproject
board/lvgl/: lv_conf.h
board/lvgl/RT_THREAD_UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h
board/lvgl/RT_THREAD_UI/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label1.c
board/lvgl/RT_THREAD_UI/images/: ui_img_1658026312.c  ui_img_1658053739.c  ui_img_1861029695.c  ui_img_1_png.c  ui_img_270506670.c  ui_img_302456090.c  ui_img_441533206.c  ui_img_537354039.c  ui_img_537381466.c
board/lvgl/RT_THREAD_UI/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
